configuration of the GraalVM experimental internal language server to communicate using NetBeans' in-memory piping